# cudagrid-studies

complex/: cudatools.h  datatypes.h  kernels.h  logbook.md  main.cu  matrix.h  repeatedMatmul.cu  run  runcomplex  runreal
copytest/: benchmark.h  main.cu  meson.build
grid-multiRHS/: compile  grid.out  logbook.md
grid-multiRHS/src/: main.cu
grid-test/: compile  logbook.md  meson.build  out  test-accelerator-for.cu
grid-test-old/: logbook.md  main.cu  main2.cpp
grid-test/.cache/clangd/index/: simd.cpp.8BDF87ACD0EF09A7.idx  simd.cu.FFB7168262304F96.idx
grid-test/tests/: a.out  allocating.cu  communicator.cu  comptest.cpp  multiRHS.cu  simd.cu  tensor.cu  threading.cu
grid-test/tests/multigrid/: MultiGrid.h
mmmtest/: datatypes.h  main_2dbt.cu  main_vect.cu  meson.build  notes  sgemm.h
shmem/: a.out  run1.ncu-rep  run2.ncu-rep  transpose.cu
