project('mmm', 'cuda')
#inc_dirs = include_directories(['.'])
executable('main', 'main.cu', cuda_args : ['-lineinfo'])
executable('1dbt', 'main_1dbt.cu', cuda_args : ['-lineinfo'])
executable('2dbt', 'main_2dbt.cu', cuda_args : ['-lineinfo'])
executable('vect', 'main_vect.cu', cuda_args : ['-lineinfo'])

